new: set up devise for Player model

--- a/dodgeball-tracker-web/app/views/layouts/application.html.erb
+++ b/dodgeball-tracker-web/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <%# TODO: Required for Devise; do I want to have a non-API side to the Rails app? %>
+    <%# <p class="notice"><%= notice %></p> %>
+    <%# <p class="alert"><%= alert %></p> %>
     <%= yield %>
   </body>
 </html>
